--- a/test_manus/test_manus.tex
+++ b/test_manus/test_manus.tex
@@ -205,16 +205,16 @@ the likely drivers of the wind risk levels. We investigated how
 restriction of forest management regimes combined with levels of
 intensity of timber extraction will affects landscape level wind risk.
 
-We hypothesized that RF would increase wind damage risk dues to
-increasing number of open edges while CCF would lower wind risk over the
-landscape. Further, we hypothetize that higher levels of timber
-extraction would increase wind risk. Lastly, we hypothetized than
-increasing amount of set-aside stands, over the landscape together with
-CCF management would increase wind damage risk due to larger present
-timber volume, and due to more frequent thinning activities. We
-investigated wind risk in terms of available timber volume, specifically
-saw and log timber volume. Lastly, we explored the trends of wind risk
-relevant to stands height, changes and species compositions.
+Our study aims to understand how types of forest management and
+harvesting intensity affect stand and landcape level wind risk over
+time, and how much timber volume is at the risk. WE hypothetized that RF
+will increase stand level wind risk due accumulated V before the final
+cut, and increase wind risk in landscape dur to increasing stands with
+open edges after the final cut whereas the CCF would homogenize wind
+risk over stand and landscape over time. However, increasing harvesting
+rates might on one hand increase wind risk due to higher frequency of
+thinnings in CCF and RF, but also lower wind risk in RF due to shorter
+rotation lenghts.
 
 \section{Methods}\label{methods}
 
@@ -397,12 +397,34 @@ intensity of timber extraction, pulp wood creates up to 50\% of teh
 total standing volume See figure @ref(fig:proportion\_V\_pulp\_log) NEW
 FIG @ref(proportion\_V\_pulp\_log).
 
+In spruce dominated forests, the proportion of the log wood from top
+stratum lowers by 50\% with increasing harvesting rate in all management
+regimes applied. Interestingly, RF maintains the high production of the
+pulp wood with increasing harvest intensity. For all species, the
+proportion of the stand and top stratum volumes lowers by 47\% (spruce,
+RF), while pulp lowers in CCF and ALL management (41) and remained the
+same (mean 100 m3/ha)in RF with increasing harvesting rates.
+
+\begin{figure}
+\centering
+\includegraphics{test_manus_files/figure-latex/V-stand-stratum-1.pdf}
+\caption{Mean pulp and log volume of the top tree layer in the stand
+over management groups and harvesting intensity gradient}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{test_manus_files/figure-latex/proportion_V_stand_strat-1.pdf}
+\caption{Mean proportion of the top stratum volume from the totatl stand
+volume by management groups and harvest intensity.}
+\end{figure}
+
 \subsubsection{Changes in wind risk}\label{changes-in-wind-risk}
 
 \begin{figure}
 \centering
 \includegraphics{test_manus_files/figure-latex/fig_windRisk_time_change-1.pdf}
-\caption{Temporal changes in wind risk over time}
+\caption{Landscape level changes in wind risk over time}
 \end{figure}
 
 \subsection{Dynamic parameters contributing to wind
@@ -439,25 +461,9 @@ maintain the mean tree height of the stand to 20 m(other) to 22 m
 harvest intensity.}
 \end{figure}
 
-\includegraphics{test_manus_files/figure-latex/mean_stand_age-1.pdf}
-\#\#\# Tree count
+\subsubsection{Tree count}\label{tree-count}
 
 \includegraphics{test_manus_files/figure-latex/mean_tree_n-1.pdf}
-
-\begin{verbatim}
-## [1]     0.00 12046.49
-\end{verbatim}
-
-\includegraphics{test_manus_files/figure-latex/mean_tree_n-2.pdf}
-
-\includegraphics{test_manus_files/figure-latex/sample_data-1.pdf}
-
-\includegraphics{test_manus_files/figure-latex/age_geom_density-1.pdf}
-\includegraphics{test_manus_files/figure-latex/age_geom_density-2.pdf}
-\includegraphics{test_manus_files/figure-latex/age_geom_density-3.pdf}
-\includegraphics{test_manus_files/figure-latex/age_geom_density-4.pdf}
-\includegraphics{test_manus_files/figure-latex/age_geom_density-5.pdf}
-\includegraphics{test_manus_files/figure-latex/age_geom_density-6.pdf}
 
 \subsubsection{Frequency of open stands}\label{frequency-of-open-stands}
 
@@ -492,6 +498,10 @@ times in CCF comparing to RF.
 \section{Discussion}\label{discussion}
 
 \subsubsection{Wind risk dynamics}\label{wind-risk-dynamics}
+
+We found that intensification of the harvesting regimes have different
+conseuqences of resulting wind risk: where CCF management increases wind
+risk, and RF lowers wind risk with increasing intensity.
 
 \subsubsection{Wind risk drivers}\label{wind-risk-drivers}
 
@@ -554,9 +564,9 @@ uncertainities in future wind occurences
 \end{itemize}
 
 The shortening of the rotation period in Norway spruce forets might
-slightly lower the wind and subsetquent bark beetle distudrabnces but
-has limited efficiencies and decreses under climate change (Zimová et
-al., 2020)
+slightly lower the wind and subsequent bark beetle distudrabnces but has
+limited efficiencies and decreses under climate change (Zimová et al.,
+2020)
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
